<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="36dp"
    android:background="@mipmap/login_icon"
    tools:context=".register.RegisterActivity">
    <EditText
        android:id="@+id/reg_shouji"
        android:layout_width="match_parent"
        android:textSize="18sp"
        android:textColor="#fff"
        android:layout_height="wrap_content"
        android:hint="@string/reg_shouji"
        android:textColorHint="#fff"
        android:background="@drawable/editext"
        android:drawableLeft="@mipmap/login_icon_phone"
        android:layout_marginTop="160dp"/>

    <EditText
        android:id="@+id/reg_yanzheng"
        android:layout_width="match_parent"
        android:textSize="18sp"
        android:textColor="#fff"
        android:layout_height="wrap_content"
        android:hint="@string/reg_yanzheng"
        android:textColorHint="#fff"
        android:background="@drawable/editext"
        android:drawableLeft="@mipmap/reg_icon"
        android:layout_marginTop="50dp"
        />
    <EditText
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#fff"
        android:textSize="18sp"
        android:textColor="#fff"
        android:drawableLeft="@mipmap/login_icon_lock"
        android:hint="@string/reg_loginpass"
        android:background="@drawable/editext"
        android:drawableRight="@mipmap/login_icon_eye"
        android:layout_marginTop="50dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/reg"
            android:layout_width="match_parent"
            android:textColor="#fff"
            android:textSize="14sp"
            android:gravity="right"
            android:layout_height="wrap_content"
            android:text="@string/app_zc_dl"/>
    </LinearLayout>
    <Button
        android:id="@+id/reg_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="注册"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textColor="#ff5f71"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="276dp"
        android:background="@drawable/button_shape"
        android:layout_marginTop="200dp"/>
</LinearLayout>