<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:orientation="vertical"
    android:background="@mipmap/login_icon"
    android:padding="36dp">
    <EditText
        android:id="@+id/login_user_et"
        android:layout_width="match_parent"
        android:textSize="18sp"
        android:textColor="#fff"
        android:layout_height="wrap_content"
        android:hint="@string/app_user"
        android:textColorHint="#fff"
        android:background="@drawable/editext"
        android:drawableLeft="@mipmap/login_icon_phone"
        android:layout_marginTop="160dp"/>

    <EditText
        android:id="@+id/login_pwd_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#fff"
        android:textSize="18sp"
        android:textColor="#fff"
        android:drawableLeft="@mipmap/login_icon_lock"
        android:hint="@string/app_pwd"
        android:background="@drawable/editext"
        android:drawableRight="@mipmap/login_icon_eye"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="144dp"
        android:layout_marginTop="50dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <CheckBox
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="14sp"
            android:buttonTint="@android:color/white"
            android:text="记住密码"/>
        <TextView
            android:id="@+id/reg"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="#fff"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="快速注册"/>
    </LinearLayout>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/button_login"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textColor="#ff5f71"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="276dp"
        android:background="@drawable/button_shape"
        android:layout_marginTop="250dp"/>



</LinearLayout>