<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<!--  &lt;!&ndash;  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#fff">-->
       <!-- <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">-->
          <!-- <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.recker.flybanner.FlyBanner
                        android:id="@+id/flyBanner"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"/>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="#ddd"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#fff">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/rxxp"
                        android:background="@mipmap/rxxp_bg"
                        android:textColor="#fcb212"
                        android:textSize="20sp" />
                    <GridView
                        android:id="@+id/gridView"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:numColumns="3"
                        android:layout_marginTop="30dp"
                        />
                </LinearLayout>
                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="#ddd"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/app_mlss"
                        android:background="@mipmap/mlss_bg"
                        android:textColor="#2e5cf2"
                        android:textSize="20sp" />
                    <ListView
                        android:id="@+id/listView"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:layout_marginTop="30dp"
                        />
                </LinearLayout>
                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:background="#ddd"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#fff">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/app_pzsh"
                        android:background="@mipmap/pzsh_bg"
                        android:textColor="#f13c81"
                        android:textSize="20sp" />
                    <GridView
                        android:id="@+id/gridView2"
                        android:layout_width="match_parent"
                        android:layout_height="700dp"
                        android:layout_marginTop="30dp"
                        android:numColumns="2"/>
                </LinearLayout>
                </LinearLayout>
           <!-- </LinearLayout>-->
  <!--  <android.support.v7.widget.RecyclerView
        android:id="@+id/recyview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
        </LinearLayout>
-->
<!--  </LinearLayout>-->

</ScrollView>
<!--
</ScrollView>
-->
